<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/root_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/collapse_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/widget_background"
            android:visibility="visible">

        <ImageView
                android:id="@+id/ivOilTemperatureIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/icon_oil_temperature"
                android:contentDescription="@string/engine_oil_temperature_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
                android:id="@+id/tvOilTemperature"
                android:text="@string/_69"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:fontFamily="sans-serif-black"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/tvCelsius"
                app:layout_constraintStart_toEndOf="@+id/ivOilTemperatureIcon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
                android:id="@+id/tvCelsius"
                android:text="@string/celsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:fontFamily="sans-serif-black"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>