<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <TextView
                android:id="@+id/tvDevice"
                android:text="@string/no_device"
                android:textSize="34sp"
                android:textAlignment="center"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
            android:id="@+id/progressCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/teal_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <TextView
            android:id="@+id/tvTemperature"
            android:text="@string/nan"
            android:textSize="60sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:id="@+id/tvCelsius"
            android:text="@string/celsius"
            android:textSize="60sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/tvTemperature"
            app:layout_constraintTop_toTopOf="@+id/tvTemperature"/>
</androidx.constraintlayout.widget.ConstraintLayout>